<resources>
    <string name="app_name">My Application</string>
    <string name="image_gallery">Image Gallery</string>
    <string name="display_selected_image">Display selected image</string>
    <string name="label">label</string>
    <string name="hint">Hint</string>
    <string name="close_hint_tab">Close Hint Tab</string>
    <string name="option_3">Option 3</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_4">Option 4</string>
    <string name="go_back">Go Back</string>
    <string name="animal_to_guess">Animal To Guess</string>
    <string name="click_to_continue">Click to Continue</string>
    <string name="score">Score</string>
    <string name="name_of_animal">Name of Animal</string>
    <string name="animal">Animal</string>
    <string name="description">Description</string>
    <string name="games">Games</string>
    <string name="randomize">Randomize</string>
    <string name="picture_of_animal">Picture of Animal</string>
    <string name="animal_indentifier_page">Animal Indentifier Page</string>
    <string name="random_animal_generator">Random Animal Generator</string>
    <string name="menu">Menu</string>
    <string name="strikes">Strikes</string>
    <string name="save">Save</string>
    <string name="avatar_skin">avatar skin</string>
    <string name="avatar_hair">avatar hair</string>
    <string name="avatar_top">avatar top</string>
    <string name="edit_avatar">Edit Avatar</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="quiz_high_score">Quiz High Score:</string>
    <string name="animals_collected">Animals Collected:</string>
    <string name="change_background">Change Background</string>
    <string name="profile">Profile</string>
    <string name="enter_your_name_here">Enter Your Name Here</string>
    <string name="_2nd_hair_attribute">2nd hair attribute</string>
    <string name="_3rd_hair_attribute">3rd hair attribute</string>
    <string name="_4th_hair_attribute">4th hair attribute</string>
    <string name="hair_color">Hair Color</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="badges">Badges</string>
    <string name="screen_background">Screen Background</string>
    <string name="next">Next</string>
    <string name="african_bullfrog_badge">african_bullfrog_badge</string>
    <string name="badge">Badge</string>
    <string name="my_collected_animals">My Collected Animals</string>
    <string name="my_animals">My Animals</string>
    <string name="matching_high_score">Matching High Score</string>
    <string name="habitat_1">Habitat 1</string>
    <string name="habitat_2">Habitat 2</string>
    <string name="habitat_3">Habitat 3</string>
    <string name="habitat_4">Habitat 4</string>
    <string name="habitats_high_score">Habitats High Score</string>
    <string name="my_zoo_question">My Zoo Question</string>
    <string name="swipe_left_for_true_and_right_for_false">Swipe Left for True and Right for False</string>
    <string name="swipe_the_question_left_for_false_and_right_for_true">Swipe the Question Left for False and Right for True</string>
    <string name="click_the_icon_to_gain_zoo_points">Click The Icon To Gain Zoo Points</string>
    <string name="store">Store</string>
    <string name="answer_questions_to_gain_zoo_points">Answer Questions to Gain Zoo Points</string>
    <string name="click_icon">click_icon</string>
</resources>